INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/utils)
LINK_LIBRARIES(${PROJECT_NAME} ${REQUIRED_LIBRARIES})
ADD_EXECUTABLE(test_sequence test_sequence.cpp   )
ADD_EXECUTABLE(comparelogs  comparelogs.cpp logtools.cpp logtools.h)
ADD_EXECUTABLE(logconvert logconvert.cpp)
ADD_EXECUTABLE(kitti2tum_log kitti2tum_log.cpp)
ADD_EXECUTABLE(analyzeAllLogs analyzeAllLogs.cpp ../utils/dirreader.h logtools.cpp logtools.h)
ADD_EXECUTABLE(wilcoxonTests wilcoxonTests.cpp ../utils/dirreader.h logtools.cpp logtools.h)
ADD_EXECUTABLE(agz2prepare agz2prepare.cpp ../utils/dirreader.h)
ADD_EXECUTABLE(dir2video dir2video.cpp ../utils/dirreader.h)
ADD_EXECUTABLE(euroc_stereoRectification euroc_stereoRectification.cpp )


ADD_EXECUTABLE(sortLog sortLog.cpp  logtools.cpp logtools.h)
ADD_EXECUTABLE(calibrate calibrate.cpp)
ADD_EXECUTABLE(task_manager task_manager.cpp threads.h)
ADD_EXECUTABLE(map_planarize map_planarize.cpp)
ADD_EXECUTABLE(system2map system2map.cpp)
ADD_EXECUTABLE(test_reloc test_reloc.cpp)
ADD_EXECUTABLE(test_dummy test_dummy.cpp)
